# iterations

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN_REVIEW_CODEX  Notes.md  README.md  file_structure.md  structure.txt  vcpkg.json
.claude/: settings.local.json
docs/: CHARACTER_MATRIX.md  CHAT_PREFERENCES.md  DESIGN_PILLARS.md  DESIGN_REVIEW_CLAUDE.md  DESIGN_REVIEW_CODEX  DESIGN_REVIEW_CODEX.md  PROJECT_STATE.md
docs/chat_notes/: CHAT_NOTES_2026-02-22.md  CHAT_NOTES_2026-02-23.md  CHAT_NOTES_2026-02-24.md
src/: main.cpp
src/components/: AnimationComponent.h  CameraComponent.h  CollisionComponent.h  PlayerComponent.h  RenderComponent.h  SpriteComponent.h  TilemapComponent.h  TransformComponent.h
src/core/: DebugRenderer.cpp  DebugRenderer.h  Game.cpp  Game.h  GameState.h  GameplayState.cpp  GameplayState.h  InputManager.cpp  InputManager.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  SettingsManager.cpp  SettingsManager.h  TextureManager.cpp  TextureManager.h  TilemapLoader.cpp  TilemapLoader.h  Types.h  UIRenderer.cpp  UIRenderer.h  WIndow.cpp  Window.h
src/ecs/: ComponentStore.h  Entity.h  System.h  World.cpp  World.h
src/systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DebugRendererSystem.cpp  DebugRendererSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h  TilemapSystem.cpp  TilemapSystem.h
